miniC-project/.antlr/ExprParser.java
// Generated from /home/ksvsc/IIITH/Monsoon20/Compilers/minic-grammar-KSVSC/ast-antlr-project/Expr.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, Type_uint=34, Type_int=35, Type_float=36, Type_char=37, 
		Type_string=38, Type_void=39, Type_bool=40, Type_file=41, True=42, False=43, 
		Continue=44, Break=45, Return=46, Read=47, Asgn_op=48, MAIN=49, U_INT=50, 
		INT=51, FLOAT=52, ID=53, STRING=54, FUNC=55, NEWLINE=56, WS=57;
	public static final int
		RULE_prog = 0, RULE_start = 1, RULE_decl = 2, RULE_arrayDeclaration = 3, 
		RULE_method = 4, RULE_args = 5, RULE_block = 6, RULE_stmt = 7, RULE_expr = 8, 
		RULE_arrayIdentifier = 9, RULE_read_block = 10, RULE_value = 11, RULE_type = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "start", "decl", "arrayDeclaration", "method", "args", "block", 
			"stmt", "expr", "arrayIdentifier", "read_block", "value", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program {'", "'}'", "'['", "']'", "'('", "')'", "'{'", "'?'", 
			"':'", "'if'", "') :'", "'else :'", "'for'", "';'", "'while'", "'out('", 
			"'/'", "'*'", "'%'", "'+'", "'-'", "'!'", "'<'", "'>'", "'>='", "'<='", 
			"'=='", "'!='", "'&'", "'|'", "'open'", "','", "'read('", "'uint'", "'int'", 
			"'float'", "'char'", "'string'", "'void'", "'bool'", "'file'", "'true'", 
			"'false'", "'continue'", "'break'", "'return'", "'read()'", "'='", "'main'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "Type_uint", 
			"Type_int", "Type_float", "Type_char", "Type_string", "Type_void", "Type_bool", 
			"Type_file", "True", "False", "Continue", "Break", "Return", "Read", 
			"Asgn_op", "MAIN", "U_INT", "INT", "FLOAT", "ID", "STRING", "FUNC", "NEWLINE", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(ExprParser.NEWLINE, 0); }
		public List<StartContext> start() {
			return getRuleContexts(StartContext.class);
		}
		public StartContext start(int i) {
			return getRuleContext(StartContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			match(T__0);
			setState(27);
			match(NEWLINE);
			setState(29); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(28);
				start();
				}
				}
				setState(31); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Type_uint) | (1L << Type_int) | (1L << Type_float) | (1L << Type_char) | (1L << Type_string) | (1L << Type_void) | (1L << Type_bool) | (1L << Type_file))) != 0) );
			setState(33);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	 
		public StartContext() { }
		public void copyFrom(StartContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Decl_startContext extends StartContext {
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(ExprParser.NEWLINE, 0); }
		public Decl_startContext(StartContext ctx) { copyFrom(ctx); }
	}
	public static class Method_startContext extends StartContext {
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(ExprParser.NEWLINE, 0); }
		public Method_startContext(StartContext ctx) { copyFrom(ctx); }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_start);
		try {
			setState(41);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new Decl_startContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(35);
				decl();
				setState(36);
				match(NEWLINE);
				}
				break;
			case 2:
				_localctx = new Method_startContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(38);
				method();
				setState(39);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	 
		public DeclContext() { }
		public void copyFrom(DeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclArrContext extends DeclContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ArrayDeclarationContext arrayDeclaration() {
			return getRuleContext(ArrayDeclarationContext.class,0);
		}
		public DeclArrContext(DeclContext ctx) { copyFrom(ctx); }
	}
	public static class DeclBasicContext extends DeclContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(ExprParser.ID, 0); }
		public DeclBasicContext(DeclContext ctx) { copyFrom(ctx); }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decl);
		try {
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new DeclBasicContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(43);
				type();
				setState(44);
				match(ID);
				}
				break;
			case 2:
				_localctx = new DeclArrContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				type();
				setState(47);
				arrayDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayDeclarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ExprParser.ID, 0); }
		public List<TerminalNode> U_INT() { return getTokens(ExprParser.U_INT); }
		public TerminalNode U_INT(int i) {
			return getToken(ExprParser.U_INT, i);
		}
		public ArrayDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayDeclaration; }
	}

	public final ArrayDeclarationContext arrayDeclaration() throws RecognitionException {
		ArrayDeclarationContext _localctx = new ArrayDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_arrayDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(ID);
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(52);
				match(T__2);
				setState(53);
				match(U_INT);
				setState(54);
				match(T__3);
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__2 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode FUNC() { return getToken(ExprParser.FUNC, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(ExprParser.NEWLINE, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_method);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			type();
			setState(60);
			match(FUNC);
			setState(61);
			match(T__4);
			setState(62);
			args();
			setState(63);
			match(T__5);
			setState(64);
			match(NEWLINE);
			setState(65);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgsContext extends ParserRuleContext {
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
	 
		public ArgsContext() { }
		public void copyFrom(ArgsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Arg_paramContext extends ArgsContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Arg_paramContext(ArgsContext ctx) { copyFrom(ctx); }
	}
	public static class Arg_declContext extends ArgsContext {
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public Arg_declContext(ArgsContext ctx) { copyFrom(ctx); }
	}

	public final ArgsContext args() throws RecognitionException {
		ArgsContext _localctx = new ArgsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_args);
		int _la;
		try {
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new Arg_declContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Type_uint) | (1L << Type_int) | (1L << Type_float) | (1L << Type_char) | (1L << Type_string) | (1L << Type_void) | (1L << Type_bool) | (1L << Type_file))) != 0)) {
					{
					{
					setState(67);
					decl();
					}
					}
					setState(72);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				_localctx = new Arg_paramContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__21) | (1L << T__30) | (1L << T__32) | (1L << True) | (1L << False) | (1L << Read) | (1L << U_INT) | (1L << INT) | (1L << FLOAT) | (1L << ID) | (1L << STRING) | (1L << FUNC))) != 0)) {
					{
					{
					setState(73);
					expr(0);
					}
					}
					setState(78);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	 
		public BlockContext() { }
		public void copyFrom(BlockContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlockstmtsContext extends BlockContext {
		public TerminalNode NEWLINE() { return getToken(ExprParser.NEWLINE, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public BlockstmtsContext(BlockContext ctx) { copyFrom(ctx); }
	}
	public static class Block_stmtContext extends BlockContext {
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(ExprParser.NEWLINE, 0); }
		public Block_stmtContext(BlockContext ctx) { copyFrom(ctx); }
	}
	public static class Block_declContext extends BlockContext {
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(ExprParser.NEWLINE, 0); }
		public Block_declContext(BlockContext ctx) { copyFrom(ctx); }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_block);
		int _la;
		try {
			setState(96);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				_localctx = new BlockstmtsContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				match(T__6);
				setState(82);
				match(NEWLINE);
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__6) | (1L << T__9) | (1L << T__12) | (1L << T__14) | (1L << T__15) | (1L << T__21) | (1L << T__30) | (1L << T__32) | (1L << Type_uint) | (1L << Type_int) | (1L << Type_float) | (1L << Type_char) | (1L << Type_string) | (1L << Type_void) | (1L << Type_bool) | (1L << Type_file) | (1L << True) | (1L << False) | (1L << Continue) | (1L << Break) | (1L << Return) | (1L << Read) | (1L << U_INT) | (1L << INT) | (1L << FLOAT) | (1L << ID) | (1L << STRING) | (1L << FUNC))) != 0)) {
					{
					{
					setState(83);
					block();
					}
					}
					setState(88);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(89);
				match(T__1);
				}
				break;
			case Type_uint:
			case Type_int:
			case Type_float:
			case Type_char:
			case Type_string:
			case Type_void:
			case Type_bool:
			case Type_file:
				_localctx = new Block_declContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				decl();
				setState(91);
				match(NEWLINE);
				}
				break;
			case T__4:
			case T__9:
			case T__12:
			case T__14:
			case T__15:
			case T__21:
			case T__30:
			case T__32:
			case True:
			case False:
			case Continue:
			case Break:
			case Return:
			case Read:
			case U_INT:
			case INT:
			case FLOAT:
			case ID:
			case STRING:
			case FUNC:
				_localctx = new Block_stmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				stmt();
				setState(94);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WhileBlockContext extends StmtContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(ExprParser.NEWLINE, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileBlockContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class OutBlockContext extends StmtContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public OutBlockContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class ExpressionContext extends StmtContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExpressionContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class ForBlockContext extends StmtContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode NEWLINE() { return getToken(ExprParser.NEWLINE, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ForBlockContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class BreakContext extends StmtContext {
		public TerminalNode Break() { return getToken(ExprParser.Break, 0); }
		public BreakContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class CondBlockContext extends StmtContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public CondBlockContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class IfBlockContext extends StmtContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ExprParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExprParser.NEWLINE, i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public IfBlockContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class ReturnValueContext extends StmtContext {
		public TerminalNode Return() { return getToken(ExprParser.Return, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnValueContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class ReturnBasicContext extends StmtContext {
		public TerminalNode Return() { return getToken(ExprParser.Return, 0); }
		public ReturnBasicContext(StmtContext ctx) { copyFrom(ctx); }
	}
	public static class ContinueContext extends StmtContext {
		public TerminalNode Continue() { return getToken(ExprParser.Continue, 0); }
		public ContinueContext(StmtContext ctx) { copyFrom(ctx); }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stmt);
		try {
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new ExpressionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				expr(0);
				}
				break;
			case 2:
				_localctx = new CondBlockContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				match(T__4);
				setState(100);
				expr(0);
				setState(101);
				match(T__5);
				setState(102);
				match(T__7);
				setState(103);
				expr(0);
				setState(104);
				match(T__8);
				setState(105);
				expr(0);
				}
				break;
			case 3:
				_localctx = new IfBlockContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(107);
				match(T__9);
				setState(108);
				match(T__4);
				setState(109);
				expr(0);
				setState(110);
				match(T__10);
				setState(111);
				match(NEWLINE);
				setState(112);
				block();
				}
				setState(118);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(114);
					match(NEWLINE);
					setState(115);
					match(T__11);
					setState(116);
					match(NEWLINE);
					setState(117);
					block();
					}
					break;
				}
				}
				break;
			case 4:
				_localctx = new ForBlockContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(120);
				match(T__12);
				setState(121);
				match(T__4);
				setState(122);
				expr(0);
				setState(123);
				match(T__13);
				setState(124);
				expr(0);
				setState(125);
				match(T__13);
				setState(126);
				expr(0);
				setState(127);
				match(T__10);
				setState(128);
				match(NEWLINE);
				setState(129);
				block();
				}
				break;
			case 5:
				_localctx = new WhileBlockContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(131);
				match(T__14);
				setState(132);
				match(T__4);
				setState(133);
				expr(0);
				setState(134);
				match(T__10);
				setState(135);
				match(NEWLINE);
				setState(136);
				block();
				}
				break;
			case 6:
				_localctx = new OutBlockContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(138);
				match(T__15);
				setState(139);
				expr(0);
				setState(140);
				match(T__5);
				}
				break;
			case 7:
				_localctx = new ReturnBasicContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(142);
				match(Return);
				}
				break;
			case 8:
				_localctx = new ReturnValueContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(143);
				match(Return);
				setState(144);
				expr(0);
				}
				break;
			case 9:
				_localctx = new BreakContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(145);
				match(Break);
				}
				break;
			case 10:
				_localctx = new ContinueContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(146);
				match(Continue);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MulDivModExpContext extends ExprContext {
		public Token op;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public MulDivModExpContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class NotExpContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public NotExpContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class OpenBlockContext extends ExprContext {
		public TerminalNode ID() { return getToken(ExprParser.ID, 0); }
		public TerminalNode STRING() { return getToken(ExprParser.STRING, 0); }
		public OpenBlockContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ValTerminalContext extends ExprContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ValTerminalContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ArrayIdContext extends ExprContext {
		public ArrayIdentifierContext arrayIdentifier() {
			return getRuleContext(ArrayIdentifierContext.class,0);
		}
		public ArrayIdContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class CondOpContext extends ExprContext {
		public Token cond_op;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public CondOpContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class TrueContext extends ExprContext {
		public TerminalNode True() { return getToken(ExprParser.True, 0); }
		public TrueContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class FalseContext extends ExprContext {
		public TerminalNode False() { return getToken(ExprParser.False, 0); }
		public FalseContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ReadBlockContext extends ExprContext {
		public Read_blockContext read_block() {
			return getRuleContext(Read_blockContext.class,0);
		}
		public ReadBlockContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class FuncCallContext extends ExprContext {
		public TerminalNode FUNC() { return getToken(ExprParser.FUNC, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public FuncCallContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class ParenthesisContext extends ExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ParenthesisContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class AddSubExpContext extends ExprContext {
		public Token op;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public AddSubExpContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class BoolOpContext extends ExprContext {
		public Token bool_op;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public BoolOpContext(ExprContext ctx) { copyFrom(ctx); }
	}
	public static class AssgnOpContext extends ExprContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode Asgn_op() { return getToken(ExprParser.Asgn_op, 0); }
		public AssgnOpContext(ExprContext ctx) { copyFrom(ctx); }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}
